log
Thu 18 Aug 2022 01:50:35 PM UTC: 
 tests:  0|6
total_score: 0/70
b584c3e
Thu 18 Aug 2022 04:52:59 PM UTC: 
 list.c | 24 +++++++++++++++++++-----
 1 file changed, 19 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:18: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   32 |   List* lista = (list*)calloc(1,sizeof(List));
      |                  ^~~~
      |                  lista
list.c:32:18: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:23: error: expected expression before ‘)’ token
   32 |   List* lista = (list*)calloc(1,sizeof(List));
      |                       ^
Compilation failed
5e737b2
Thu 18 Aug 2022 04:53:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bef85c3
Thu 18 Aug 2022 04:55:06 PM UTC: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|0
c09a64e
Thu 18 Aug 2022 04:59:20 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
0bd6fa2
Thu 18 Aug 2022 05:00:01 PM UTC: 
 list.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  0|0
c40f8e5
Thu 18 Aug 2022 05:00:22 PM UTC: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
af84285
Thu 18 Aug 2022 06:27:44 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:38:25: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   38 |     list->current = list->prev;
      |                         ^~
Compilation failed
1390e85
Thu 18 Aug 2022 06:28:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
38bbb51
Thu 18 Aug 2022 06:29:31 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
940562a
Thu 18 Aug 2022 06:30:44 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
c5dd3c1
Thu 18 Aug 2022 06:31:20 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:30: error: invalid operands to binary != (have ‘Node’ and ‘void *’)
   37 |   while(*list->current->prev != NULL){
      |         ~~~~~~~~~~~~~~~~~~~~ ^~
      |         |
      |         Node
Compilation failed
24b2113
Thu 18 Aug 2022 06:31:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
de509fd
Thu 18 Aug 2022 06:36:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1a30c10
Thu 18 Aug 2022 06:37:27 PM UTC: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:3: error: format not a string literal and no format arguments [-Werror=format-security]
   37 |   printf(list->current->data);
      |   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4160261
Thu 18 Aug 2022 06:37:56 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
4e7f81d
Thu 18 Aug 2022 06:39:30 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:38: error: expected ‘;’ before ‘while’
   37 |   list->current = list->current->prev
      |                                      ^
      |                                      ;
   38 |   while(list->current != NULL){
      |   ~~~~~                               
Compilation failed
7ed23e7
Thu 18 Aug 2022 06:39:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5f1cf93
Thu 18 Aug 2022 06:45:50 PM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
d7416bc
Fri 19 Aug 2022 12:17:53 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
ab10c8b
Fri 19 Aug 2022 12:18:58 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
d45b053
Fri 19 Aug 2022 12:20:20 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
cb252ae
Fri 19 Aug 2022 10:20:39 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
eec47ac
Fri 19 Aug 2022 10:21:35 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
f029b3e
Fri 19 Aug 2022 10:26:22 PM UTC: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
099cc9b
Fri 19 Aug 2022 10:26:40 PM UTC: 
 list.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  1|5
total_score: 10/70
f6fa694
Fri 19 Aug 2022 10:27:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fd503ae
Fri 19 Aug 2022 10:27:52 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:38:17: error: ‘Node’ has no member named ‘current’
   38 |   if (list->head->current != NULL)
      |                 ^~
Compilation failed
72ec9df
Fri 19 Aug 2022 10:28:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4211eea
Fri 19 Aug 2022 10:28:39 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
561aff1
Fri 19 Aug 2022 10:28:57 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
f1f37e5
Fri 19 Aug 2022 10:29:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e8f5107
Fri 19 Aug 2022 10:29:58 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
dcae484
Fri 19 Aug 2022 10:30:53 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:31: error: expected ‘;’ before ‘}’ token
   48 |     return list->current->data
      |                               ^
      |                               ;
   49 |   }
      |   ~                            
Compilation failed
85d129e
Fri 19 Aug 2022 10:31:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
25005a6
Fri 19 Aug 2022 10:33:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9cdb34d
Fri 19 Aug 2022 10:33:51 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
077812c
